# CodeWars

C++/3 kyu/Battleship_field_validator/: CMakeLists.txt  main.cpp
C++/4 kyu/A_Simplistic_TCP_Finite_State_Machine_FSM/: CMakeLists.txt  main.cpp
C++/5 kyu/1-800-CODE-WAR/: CMakeLists.txt  main.cpp
C++/5 kyu/Convert_all_the_cases/: CMakeLists.txt  main.cpp
C++/5 kyu/Moving_Zeros_To_The_End/: CMakeLists.txt  main.cpp
C++/5 kyu/RGB_To_Hex_Conversion/: CMakeLists.txt  main.cpp
C++/5 kyu/String_incrementer/: CMakeLists.txt  main.cpp
C++/6 kyu/Compile_Time_Prime_Number_Detection/: CMakeLists.txt  main.cpp
C++/6 kyu/Compile_time_1_Factorial/: CMakeLists.txt  main.cpp
C++/6 kyu/Decode_the_Morse_code/: CMakeLists.txt  main.cpp
C++/6 kyu/IPv4_to_int32/: CMakeLists.txt  main.cpp
C++/6 kyu/Is_a_number_prime/: CMakeLists.txt  main.cpp
C++/6 kyu/Replace_With_Alphabet_Position/: CMakeLists.txt  main.cpp
C++/6 kyu/The_Vowel_Code/: CMakeLists.txt  main.cpp
C++/7 kyu/Complete_The_Pattern_1/: CMakeLists.txt  main.cpp
C++/8 kyu/All_Star_Code_Challenge_18/: CMakeLists.txt  main.cpp
C++/8 kyu/Beginner_Reduce_but_Grow/: CMakeLists.txt  main.cpp
C++/8 kyu/Collinearity/: CMakeLists.txt  main.cpp
C++/8 kyu/Convert_a_Number_to_a_String/: CMakeLists.txt  main.cpp
C++/8 kyu/Convert_a_String_to_a_Number/: CMakeLists.txt  main.cpp
C++/8 kyu/Count_Odd_Numbers_below_n/: CMakeLists.txt  main.cpp
C++/8 kyu/Count_the_Monkeys/: CMakeLists.txt  main.cpp
C++/8 kyu/Counting_sheep/: CMakeLists.txt  main.cpp
C++/8 kyu/Even_or_Odd/: CMakeLists.txt  main.cpp
C++/8 kyu/Invert_values/: CMakeLists.txt  main.cpp
C++/8 kyu/MakeUpperCase/: CMakeLists.txt  main.cpp
C++/8 kyu/Powers_of_2/: CMakeLists.txt  main.cpp
C++/8 kyu/Remove_exclamation_marks/: CMakeLists.txt  main.cpp
C++/8 kyu/Sentence_Smash/: CMakeLists.txt  main.cpp
C++/8 kyu/Sum_without_highest_and_lowest_number/: CMakeLists.txt  main.cpp
C/5 kyu/Convert_A_Hex_String_To_RGB/: CMakeLists.txt  main.cpp
C/5 kyu/Human_Readable_Time/: CMakeLists.txt  main.c
